2007-10-16  Nick Clifton  <nickc@redhat.com>

	* configure.in (--enable-elf-stt-common): New configure
	option.  If enabled then the tools can generate symbols with
	the ELF STT_COMMON type.
	* config.in: Regenerate.
	* configure: Regenerate.
	* elf.c (swap_out_syms): If USE_STT_COMMON is defined then set
	the type of emitted common symbols to STT_COMMON.
	* elfcode.h (elf_slurp_symbol_table): Accept STT_COMMON symbol
	types.
	
2007-10-15  Alan Modra  <amodra@bigpond.net.au>

	* coff-arm.c (arm_emit_base_file_entry): Check fwrite return value.
	Return status.  Adjust callers.
	* coff-mcore.c (mcore_emit_base_file_entry): Likewise.
	* coff-ppc.c (write_base_file_entry): New function.
	(coff_ppc_relocate_section): Use it.
	* elf32-arm.c (find_thumb_glue): Check asprintf return status.
	(find_arm_glue): Likewise.
	* vms-misc.c (_bfd_vms_output_flush): Check fwrite return value.

2007-10-12  Nick Clifton  <nickc@redhat.com>

	PR 5160
	* elflink.c (eval_symbol): Remove bufsz variable and use
	sizeof(symbuf) where necessary.

2007-10-12  M R Swami Reddy <MR.Swami.Reddy@nsc.com>

	* elf32-cr16.c (elf32_cr16_relax_section): Fix condition check typo.

2007-10-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfxx-mips.c (mips_elf_sort_hash_table_f): Handle forced
	local symbols specially.
	(mips_elf_set_global_got_offset): Skip forced local symbols.

2007-10-12  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (elfcore_grok_prxfpreg): Fix comment typo.

2007-10-10  H.J. Lu  <hongjiu.lu@intel.com>

	* elf.c (get_program_header_size): Always add a PT_GNU_RELRO
	segment for -z relro.
	(_bfd_elf_map_sections_to_segments): Make a PT_GNU_RELRO
	segment only when needed.

2007-10-05  Bob Wilson  <bob.wilson@acm.org>
	
	* elf32-xtensa.c (relax_section): Call pin_internal_relocs when
	changing a relocation's offset.  Adjust call to translate_reloc.  Do
	not add a fix record for a DIFF reloc.  For other relocs, only add a